crates/kotlin-syntax/tests/snapshots/lexer_snapshots__raw_string_quote_runs.snap
---
source: crates/kotlin-syntax/tests/lexer_snapshots.rs
expression: out
---
SOURCE:
val a = """x"""" 
val b = """x"""""
val c = """x""""""
val d = """"""""

TOKENS:
VAL_KW "val"
WHITESPACE " "
IDENTIFIER "a"
WHITESPACE " "
EQUAL "="
WHITESPACE " "
OPEN_RAW_QUOTE "\"\"\""
STRING_CONTENT "x"
STRING_CONTENT "\""
CLOSE_RAW_QUOTE "\"\"\""
WHITESPACE " "
NEWLINE "\n"
VAL_KW "val"
WHITESPACE " "
IDENTIFIER "b"
WHITESPACE " "
EQUAL "="
WHITESPACE " "
OPEN_RAW_QUOTE "\"\"\""
STRING_CONTENT "x"
STRING_CONTENT "\"\""
CLOSE_RAW_QUOTE "\"\"\""
NEWLINE "\n"
VAL_KW "val"
WHITESPACE " "
IDENTIFIER "c"
WHITESPACE " "
EQUAL "="
WHITESPACE " "
OPEN_RAW_QUOTE "\"\"\""
STRING_CONTENT "x"
STRING_CONTENT "\"\"\""
CLOSE_RAW_QUOTE "\"\"\""
NEWLINE "\n"
VAL_KW "val"
WHITESPACE " "
IDENTIFIER "d"
WHITESPACE " "
EQUAL "="
WHITESPACE " "
OPEN_RAW_QUOTE "\"\"\""
STRING_CONTENT "\"\""
CLOSE_RAW_QUOTE "\"\"\""
NEWLINE "\n"
EOF ""

LEX_ERRORS:
<none>
