crates/kotlin-syntax/tests/snapshots/lexer_snapshots__unicode_illegal_character.snap
---
source: crates/kotlin-syntax/tests/lexer_snapshots.rs
expression: out
---
SOURCE:
val face = 😀1

TOKENS:
VAL_KW "val"
WHITESPACE " "
IDENTIFIER "face"
WHITESPACE " "
EQUAL "="
WHITESPACE " "
INTEGER_LITERAL "1"
NEWLINE "\n"
EOF ""

LEX_ERRORS:
LexicalError { kind: UnexpectedChar('😀'), range: 11..15 }
